# kiln-theme

./: .gitignore  CLAUDE.md  README.md  palette.yaml  pyproject.toml
examples/: README.md
preview/: index.html  theme-tuner.html
scripts/: apply-theme.sh  fetch-examples.sh
src/kiln/: __init__.py  generate.py  validate.py
templates/: delta.gitconfig.j2  fish.conf.j2  ghostty.conf.j2  obsidian.css.j2  tide.conf.j2  tmux.conf.j2
templates/nvim/: highlights.lua.j2  init.lua.j2  kiln.lua.j2  lualine.lua.j2  palette.lua.j2
templates/obsidian/: manifest.json.j2  theme.css.j2
templates/vscode/: package.json.j2
templates/vscode/themes/: kiln.json.j2
templates/web/: tokens.json.j2  variables.css.j2
tests/: test_generate.py
